fix align

--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -72,6 +72,7 @@ ul.network-icon .big-icon {
   width: 45em;
   max-width: calc(100% - 4em);
   margin: 0 auto;
+  text-align: justify;
 }
 
 .home-section > .content > :last-child {
